# best-reviewer

best reviewer/CC_PRIMEPRINTER_18/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake
best reviewer/CC_PRIMEPRINTER_18/src/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  PrimePrinter.cc  PrimePrinter.h  cmake_install.cmake
best reviewer/CC_PRIMEPRINTER_18/test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  PrimePrinterTest.cc  PrimePrinterTest.exe.stackdump  cmake_install.cmake  lead.txt
best reviewer/CC_PRODUCTEXPORT_18/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake
best reviewer/CC_PRODUCTEXPORT_18/src/: CMakeLists.txt  CTestTestfile.cmake  Makefile  Price.cpp  Price.h  XMLExporter.cpp  XMLExporter.h  cmake_install.cmake
best reviewer/CC_PRODUCTEXPORT_18/test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  Makefile_justmake  ProductExportApprovalTests.exe.stackdump  XMLExporterTest.XMLReporterTestSuite.testExportTaxDetails.approved.xml  XMLExporterTest.cpp  cmake_install.cmake  unittest_main.cpp
best reviewer/GmockExample-master/: CMakeLists.txt
best reviewer/GmockExample-master/src/: CMakeLists.txt
best reviewer/GmockExample-master/test/: BuiltInDefault.cpp  CMakeLists.txt  GmockOutput.cpp  NiceStrictTest.cpp  SimpleMockTest.cpp
best reviewer/GtestExample-master/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake
best reviewer/GtestExample-master/lib/: CTestTestfile.cmake  Makefile  cmake_install.cmake
best reviewer/GtestExample-master/src/: CMakeLists.txt  CTestTestfile.cmake  HelloWorld.cpp  HelloWorld.h  LibraryBook.cc  Makefile  MyString.cc  MyString.h  Person.cpp  Person.h  Queue.h  Source.cc  Source.h  cmake_install.cmake
best reviewer/GtestExample-master/test/: ApprovalTest.cpp  AssertPredTest.cpp  CMakeLists.txt  CTestTestfile.cmake  CustomParameterizedTest.cpp  CustomParameterizedTest.exe.stackdump  FloatingPointTest.cpp  FriendTest.cpp  Makefile  MatcherTest.cpp  MatcherTest.exe.stackdump  ParameterizedTest.cpp  SimpleAssertionTest.cpp  StringAssertionTest.cpp  TestFixtureTest.cpp  cmake_install.cmake
best reviewer/HelloWorld_18/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake
best reviewer/HelloWorld_18/src/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  hello.cpp  hello.h
best reviewer/HelloWorld_18/test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  main.cpp
best reviewer/RF_EXAM_18/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake
best reviewer/RF_EXAM_18/lib/: CTestTestfile.cmake  Makefile  cmake_install.cmake
best reviewer/RF_EXAM_18_2/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
best reviewer/RF_EXAM_18_2/test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
best reviewer/RF_Example-master/: README.md
best reviewer/RF_Example-master/c_replace_typecode_with_subclass/: CMakeLists.txt  LightDriver.c  LightDriver.h  LightDriverTest.cc
best reviewer/RF_Example-master/introduce_special_case_after/: BillInfo.h  BillingPrinter.cpp  BillingPrinterTest.cpp  CMakeLists.txt  Company.h  Customer.h  PaymentHistory.h
best reviewer/RF_Example-master/replace_typecode_with_subclass_delegate_after/: CMakeLists.txt  Employee.cpp  Employee.h  EmployeeTest.cpp  EmployeeType.cpp  EmployeeType.h
best reviewer/RF_VIDEOSTORE_18/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake
best reviewer/RF_VIDEOSTORE_18/test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  VideoStoreTest.VideoStoreTestFixture.testHtmlsatement.approved.txt  VideoStoreTest.VideoStoreTestFixture.testsatement.approved.txt  VideoStoreTest.cc  VideoStoreTest.exe.stackdump  cmake_install.cmake
best reviewer/SHARED/: README.md  team.csv  리뷰어.csv
best reviewer/TDD_EXAM_18/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake
best reviewer/TDD_EXAM_18/test/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  MockTuner.h  TVControllerTests.cpp  cmake_install.cmake
best reviewer/TDD_GILDEDROSE_18/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake
best reviewer/TDD_GILDEDROSE_18/test/: CMakeLists.txt  CTestTestfile.cmake  GildedRoseApprovalTests.cc  GildedRoseTextTests.cc  GildedRoseUnitTests.cc  Makefile  cmake_install.cmake
best reviewer/TDD_RPNCALCULATOR_18/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  이승우.md
best reviewer/TDD_RPNCALCULATOR_18/test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  RPNCalculatorTest.cc  RPNCalculatorTest.exe.stackdump  cmake_install.cmake
best reviewer/TDD_SUPERMARKET_18/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  HtmlReceiptPrinter.txt  Makefile  README.md  cmake_install.cmake
best reviewer/TDD_SUPERMARKET_18/test/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  FakeCatalog.h  Makefile  SupermarketTest.HtmlReceiptPrinterTest.HtmlPrintReceipt.approved.txt  SupermarketTest.ReceiptPrinterTest.printReceipt.approved.txt  SupermarketTest.cc  cmake_install.cmake
best reviewer/TDD_TRIPSERVICE_18/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake
best reviewer/TDD_TRIPSERVICE_18/test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  MockTripDAO.h  MockUserSession.h  TripServiceTests.cpp  UserSessionAccessor.h  cmake_install.cmake
best reviewer/TDD_TURTLE-main/: Makefile  MockTurtle.h  Painter.h  README.md  TestMain.cpp  Turtle.h
best reviewer/TeamProj/: FAQ.md  README.md
best reviewer/TeamProj/test/: CMakeLists.txt
best reviewer/TeamProj/test/src/: CMakeLists.txt  hardtoname.cc  hardtoname.h  main.cc
best reviewer/TeamProj/test/test/: CMakeLists.txt  hardtonametest.cc
best reviewer/environment/: best_reviewer.txt  git.txt
(+154 files in other folders)
